[package]
name = "compact-indexer"
version = "0.4.0"
authors = ["Eugene The Dream"]
rust-version = "1.71.0"
edition = "2021"

[[bin]]
name = "compact-indexer"
path = "src/bin/node.rs"

[[bin]]
name = "lake-indexer"
path = "src/bin/lake.rs"

[dependencies]
actix = "=0.13.0"
actix-web = "4.3.0"
# actix-http = "=3.0.0-beta.6"
actix-tls = "3.0.0"
actix-rt = "2.2.0"
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.2" }
# futures = "0.3.5"
tokio = { version = "1.1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0.1.6"

near-indexer = { git = "https://github.com/near/nearcore", rev = "1.36.5" }

clickhouse = "0.11.6"

### Locking versions for 1.69.0
clap = "=4.2.4"
anstyle = "=1.0.0"
anstyle-parse = "=0.2.0"
