[package]
name = "compact-indexer"
version = "0.31.0"
authors = ["Eugene The Dream"]
rust-version = "1.86.0"
edition = "2021"

[[bin]]
name = "compact-indexer"
path = "src/bin/node.rs"

[[bin]]
name = "lake-indexer"
path = "src/bin/lake.rs"

[[bin]]
name = "redis-indexer"
path = "src/bin/red.rs"

[[bin]]
name = "ft-red"
path = "src/bin/ft_red.rs"

[[bin]]
name = "inject-ft"
path = "src/bin/inject_ft.rs"

[[bin]]
name = "lake-convert"
path = "src/bin/lake_convert.rs"

[[bin]]
name = "export-ft"
path = "src/bin/export_ft.rs"

[[bin]]
name = "update-balances"
path = "src/bin/update_balances.rs"

[[bin]]
name = "balances-backfill"
path = "src/bin/balances_backfill.rs"

[[bin]]
name = "transfer-b-to-tb"
path = "src/bin/transfer_b_to_tb.rs"

[[bin]]
name = "data-export"
path = "src/bin/data_export.rs"


[dependencies]
actix = "=0.13.0"
actix-web = "4.3.0"
# actix-http = "=3.0.0-beta.6"
actix-tls = "3.0.0"
actix-rt = "2.2.0"
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.2" }
# futures = "0.3.5"
tokio = { version = "1.1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.6"

redis = { version = "0.24.0", features = ["tokio-comp", "tokio-native-tls-comp", "streams"] }
itertools = "0.12.0"

clickhouse = "0.11.6"

tar = "0.4"
flate2 = "1.0"

csv = "1.3.0"
serde_with = "3.6.1"
hex = "0.4.3"

reqwest = { version = "0.12.2", features = ["json"] }
base64 = "0.21.5"

fastnear-primitives = "0.31.0"
fastnear-neardata-fetcher = "0.31.0"
near-crypto = "0.31.0"

signal-hook = "0.3.18"
